2009-04-13  Janne Jalkanen <jalkanen@apache.org>

        * 3.0.0-svn-101
        
        * At Andrew's suggestion, WikiName is now called WikiPath. Also changed
        relevant methods in WikiPage.
        
2009-04-12  Janne Jalkanen <jalkanen@apache.org>

        * 3.0.0-svn-100
        
        * Moved PageTimeComparator, PropertyReader and StringTransmutator
        to the util package.
        
        * Moved PageLock to org.apache.wiki.content.lock package.
        
2009-04-10  Andrew Jaquith <ajaquith AT apache DOT org>

        * 3.0.0-svn-99
        
        * Lots of generics improvements.
        
        * [JSPWIKI-473] Fixed bug that was causing role checks using custom
        Authorizers to fail. AuthenticationManager was not calling
        Authorizer.isInRole(WikiSession, Principal), as it should have.
        In addition to fixing the bug, we also now include a special test case
        to verify that custom Authorizers work properly. Thanks to Steve
        Dahl for reporting this issue. (This was forward-ported from 2.8.)

2009-04-06  Andrew Jaquith <ajaquith AT apache DOT org>

        * 3.0.0-svn-98

        * Refactored various exception-throwing code bits to use the extended
        constructors for WikiException/WikiSecurityException/ProviderException
        to provide for better logging and debugging.

        * Added support in WikiCallbackHandler for HttpRequestCallback and
        WikiEngineCallback. This means LoginModules used for JSPWiki integrated
        (custom) authentication can now access the WikiEngine and the HTTP request.
        Thanks to Lou Peters and many, many others for bringing this issue to my
        attention. Please test this function! This change has been forward-ported from
        2.8.3. 
        
        * As a result of the additional callback support for LoginModules used with
        integrated authentication, AuthenticationManager gains a new method,