@@ -95,7 +95,7 @@ public class LinkToTag
             {
                 pageName = p.getName();
 
-                isattachment = p instanceof Attachment;
+                isattachment = p.isAttachment();
             }
             else
             {
